--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,33 +1,30 @@
-<h1>Listing projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Funding goal</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="center">
+  <div class="row">
     <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.description %></td>
-        <td><%= project.funding_goal %></td>
-        <td><%= project.start_date %></td>
-        <td><%= project.end_date %></td>
-        <td><%= link_to 'Show', project, class: "btn btn-link" %></td>
-        <td><%= link_to 'Edit', edit_project_path(project), class: "btn btn-link" %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <div class="col-md-3">
 
-<br>
+        <div class="thumbnail">
+          <%= image_tag project.image.url(:medium) %>
+          <div class="caption">
+            <h3><%= project.name %></h3>
+            <p><strong>Funding Goal</strong> <%= number_to_currency(project.funding_goal) %></p>
+            <p><%= project.description %></p>
+            <p><strong>End Date</strong> <%= project.end_date.to_date %></p>
+            <p><%= link_to 'Show', project, class: "btn btn-link" %> <%= link_to 'Edit', edit_project_path(project), class: "btn btn-link" %></p>
+            
+          </div>
+        </div>
+        
+        <p><a href="#" class="btn btn-primary" role="button">Support</a> <a href="#" class="btn btn-default" role="button">View</a></p>
+          
+          <%= link_to 'Show', project, class: "btn btn-link" %><br>
+          <%= link_to 'Edit', edit_project_path(project), class: "btn btn-link" %><br>
+          <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+
+      </div>
+    <% end %>
+  </div>
+</div>
+
 
 <%= link_to 'New Project', new_project_path, class: "btn btn-primary" %>
