--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,8 @@
+
 <div class="center">
   <div class="row">
     <% @projects.each do |project| %>
-      <div class="col-md-3">
+      <div class="col-sm-6 col-md-4">
 
         <div class="thumbnail">
           <%= image_tag project.image.url(:medium) %>
@@ -15,16 +16,12 @@
           </div>
         </div>
         
-        <p><a href="#" class="btn btn-primary" role="button">Support</a> <a href="#" class="btn btn-default" role="button">View</a></p>
+      
           
-          <%= link_to 'Show', project, class: "btn btn-link" %><br>
-          <%= link_to 'Edit', edit_project_path(project), class: "btn btn-link" %><br>
+        
           <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
 
       </div>
     <% end %>
   </div>
 </div>
-
-
-<%= link_to 'New Project', new_project_path, class: "btn btn-primary" %>
