made changes to css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.body {
+	background-color: #F7FAFA;
+}
 
 .navbar-default {
 	background-color: #F3DF79;
 	height: 88px;
+	border-radius: 0px !important;
+}
+
+.navbar-inner {
+    border-radius: 0px !important;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -20,3 +28,37 @@
 .center {
 	text-align: center;
 }
+
+.rewards-right {
+	float: right;
+
+}
+
+.project-heading-center {
+	text-align: center;
+	margin: 50px;
+	padding-bottom: 20px;
+	
+}
+
+.show-image {
+	margin: 40px;
+	padding-bottom: 20px;
+	text-align: center;
+}
+
+.project-show-full {
+	background-color: #fff;
+	border: 1px solid #D9D9DE;
+}
+
+.container {
+	width: 960px;
+}
+
+.thumbnail {
+	height: 500px;
+}
+
+
+
