--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= form_for(@project, :html => { :multipart => true }) do |f| %>
   <% if @project.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="bg-warning">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
@@ -39,13 +39,15 @@
   
 
   <!-- Nested forms -->
-
-  <div class="form-group">
+  <div>
     <h2>Rewards</h2>
-      <%= f.fields_for :rewards do |reward| %>
-        <%= render 'reward_fields', :f => reward %>
-      <% end %>
-      <%= link_to_add_association 'add reward', f, :rewards %>
+    <div class="form-group">
+      
+        <%= f.fields_for :rewards do |reward| %>
+          <%= render 'reward_fields', :f => reward %>
+        <% end %>
+        <%= link_to_add_association 'add reward', f, :rewards %>
+    </div>
   </div>
 
   <div class="form-group">
