--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New project</h1>
 
-<%= render 'form' %>
+<div>
+	<%= render 'form' %>
+</div>
 
 <%= link_to 'Back', projects_path, class: "btn btn-link" %>
