--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,31 +1,50 @@
-<p id="notice"><%= notice %></p>
+<div class="alert alert-info alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+  <p id="notice"><%= notice %></p>
+</div>
 
-<%= image_tag @project.image.url(:medium) %>
+<div class="project-heading-center">
+  <h1><%= @project.name %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
+<div class="project-show-full">
+  <div class="col-md-8">
+    <%= image_tag @project.image.url(:medium), class: "show-image" %>
+    <p>
+      <strong>Description:</strong>
+      <%= @project.description %>
+    </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+    <p>
+      <strong>Funding goal:</strong>
+      <%= number_to_currency(@project.funding_goal) %>
+    </p>
 
-<p>
-  <strong>Funding goal:</strong>
-  <%= number_to_currency(@project.funding_goal) %>
-</p>
+    <p>
+      <strong>Start date:</strong>
+      <%= @project.start_date.to_date %>
+    </p>
 
-<p>
-  <strong>Start date:</strong>
-  <%= @project.start_date.to_date %>
-</p>
+    <p>
+      <strong>End date:</strong>
+      <%= @project.end_date.to_date %>
+    </p>
+  </div>
 
-<p>
-  <strong>End date:</strong>
-  <%= @project.end_date.to_date %>
-</p>
+  <div class="row">
+    <div class="col-md-4" class="rewards-right" >
+    <p>
+      <strong>Funding goal:</strong>
+      <%= number_to_currency(@project.funding_goal) %>
+    </p>
+      <% @project.rewards.each do |reward| %>
+        <div class="thumbnail"><p>Pledge <%= number_to_currency(reward.amount) %> or more</p>
+        <p><%= reward.description %></p></div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
 
 <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-link" %> |
 <%= link_to 'Back', projects_path, class: "btn btn-link" %>
